fix: collapse

--- a/src/styles/components/collapse.scss
+++ b/src/styles/components/collapse.scss
@@ -4,7 +4,6 @@
     margin-block-start: 1.3rem;
   }
   background-color: $color-grey-2;
-
   border-radius: $border-radius-s;
 }
 .details {
@@ -50,7 +49,7 @@
     }
 
     :is(.details__content__description, .details__content__list) {
-      padding: 0 0 0 1rem;
+      padding: 0 2rem 0 1rem;
       transition: max-height 0.4s ease-out, padding 0.4s ease-in;
       max-height: 0;
       overflow: hidden;
@@ -67,7 +66,7 @@
     :is(.details__content__description, .details__content__list) {
     max-height: 27rem;
     transition: max-height 0.4s ease-out , padding 0.4s ease-out;
-    padding: 2rem 0 2rem 2rem;
+    padding: 2rem 1rem 2rem 2rem;
   }
 
 }
